1. Fix basic structure 2. Add css files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Ayon Sen</title>
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./github-light.css">
+  <meta name="viewport" content="width=device-width">
+
+</head>
+<body>
+
+  <div class="wrapper">
+    <header>
+      <img src="./Scott Alfeld&#39;s Home Page_files/smallme.jpg">
+      <h1>Ayon Sen</h1>
+      <br> PhD Student
+      <br> <a href="https://www.cs.wisc.edu/" target="_blank">Computer Sciences Department</a>
+      <br> <a href="https://www.wisc.edu/" target="_blank">University of Wisconsin-Madison</a>
+      <br>
+      <br>email: asen6 at wisc.edu
+
+
+
+    </header>
+    <section>
+      <h3>About Me</h3>
+      I am a fourth year graduate student at the Computer Sciences Department at UW-Madison.
+
+      <br><br>
+      <h3>Research</h3>
+      <br>
+
+      <h3>Publication</h3>
+      <br>
+
+      <h3>Experience</h3>
+      <br>
+
+      <h3>Education</h3>
+      <br>
+    </section>
+    <footer>
+      <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </footer>
+  </div>
+</body>
+</html>
