Add Publications and work experience along with image

--- a/index.html
+++ b/index.html
@@ -13,33 +13,66 @@
 
   <div class="wrapper">
     <header>
-      <img src="./Scott Alfeld&#39;s Home Page_files/smallme.jpg">
+      <img src="images/Ayon.jpg">
       <h1>Ayon Sen</h1>
       <br> PhD Student
       <br> <a href="https://www.cs.wisc.edu/" target="_blank">Computer Sciences Department</a>
       <br> <a href="https://www.wisc.edu/" target="_blank">University of Wisconsin-Madison</a>
       <br>
-      <br>email: asen6 at wisc.edu
-
-
+      <br>email: asen6 at wisc dot edu
 
     </header>
     <section>
+      <br><br>
       <h3>About Me</h3>
-      I am a fourth year graduate student at the Computer Sciences Department at UW-Madison.
+      I am a fourth year Ph.D. student at the Computer Sciences Department, University of Wisconsin-Madison under the supervision of <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research interests lie in the domain of data mining, machine learning and machine teaching. My current focus is machine teaching which is the inverse problem to machine learning. In this scenario, we assume that a teacher knows the learning goal and wants to design an optimal (e.g., smallest) training set for a particular learner. Machine teaching has multiple applications in the fields of computer security, debugging, educational psychology etc. More detials about machine teaching can be found <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">here</a>.
 
       <br><br>
-      <h3>Research</h3>
-      <br>
-
-      <h3>Publication</h3>
-      <br>
+      <h3>Publications</h3>
+      <ol>
+        <li> Md. Mahbubul Hasan, A. S. M. Sohidull Islam, Ayon Sen: Palindromic Subsequence Automata and Longest Common Palindromic Subsequence. MCS 2017: 1-14</li>
+        <li> Xuezhou Zhang, Hrag Ohannessian, Ayon Sen, Scott Alfeld, Xiaojin Zhu: Optimal Teaching for Online Perceptrons. NIPS COnstructive Machine Learning Workshop 2016 </li>
+        <li> Ayon Sen, Md. Monirul Islam, Kazuyuki Murase, Xin Yao: Binarization With Boosting and Oversampling for Multiclass Classification. IEEE T. Cybernetics 2015, Issue 99. </li>
+        <li> Ayon Sen, A. S. M. Sohidull Islam, Md. Yusuf Sarwar Uddin: MARQUES: Distributed multi-attribute range query solution using space filling curve on DTHs. NSysS 2015: 1 -9 </li>
+        <li> Ayon Sen, Md. Monirul Islam, Kazuyuki Murase: An algorithmic framework based on the binarization approach for supervised and semi-supervised multiclass problems. IJCNN 2014: 175-182. </li>
+        <li> Ayon Sen, Tahmid-un-Nabi, Pritom Ahmed, Rezwana Reaz, A. S. M. Sohidull Islam, M. Sohel Rahman: A Modified Scatter Search Approach to Solve the DNA Fragment Assembly Problem. MIC 2013. </li>
+        <li> Md. Mahbubul Hasan, A. S. M. Sohidull Islam, Ayon Sen: On Palindromic Sequence Automata and Applications. ICIAA 2013: 158-168</li>
+      </ol>
 
       <h3>Experience</h3>
-      <br>
+      <h4>Applied Scientist Intern</h4>
+      <b>Organization:</b> Amazon<br>
+      <b>Period:</b> May 2017 - Aug 2017<br>
+      I worked on the Core Machine Learning team on the substitutes recommendation problem. In this system substitutes of products are suggested to the customers. This is an integral problem in Amazon across several businesses. For my project I designed a deep neural network based model which does not use behavioral data (from customers) or hand tuned features. Hence the model is easily applicable to newer or unpopular products. The model tries to learn an embedding for the products (from textual and image features) which can be used to find other substitutes. In particular the model was trained using a triplet architecture i.e., each input contained features for three products. Our experiments suggested that the model performed better than the production model being used at the time.
+      <br><br>
+      <h4>SDE Intern</h4>
+      <b>Organization:</b> Amazon<br>
+      <b>Period:</b> May 2016 - Aug 2016<br>
 
+      For my Internship project, I worked for Reading and Behavior Analytics under Kindle Reader Engineering. My task was to design a system, which facilitates MapReduce job without having to write any MapReduce code. The key of the job was fixed before hand. The values for job (basic data types like long, double, string etc and complex data types like objects and lists are supported) are specified using a plain text file in simple format. The main advantages are:<br>
+      <ol>
+        <li>Writing a new MapReduce task without actually writing any code</li>
+        <li>This saves a lot of time also</li>
+        <li>Multiple sources (of different types like Sequence files and text files) and multiple destination types are supported</li>
+        <li>Output is stored in JSON format. Thus we can create an external table on top of it to run complex querie.
+      </ol>
+      <h4>SDE Intern</h4>
+      <b>Organization:</b> Amazon<br>
+      <b>Period:</b> May 2015 - Aug 2015<br>
+      I worked for the Xray team under Kindle Reader Engineering. My project involved developing an end-to-end computer vision system to automatically train and evaluate classifiers and use the trained classifiers to classify images. The system was versatile to accommodate different types of classifiers.
+
+      <br><br>
+      <h4>Lecturer</h4>
+      <b>Organization:</b> Department of Computer Science, Bangladesh University of Engineering and Technology<br>
+      <b>Period:</b> May 2012 - Aug 2014<br>
+      <b>Courses instructed:</b> Object Oriented Programming Language, Software Development and Information System Design, Database, Computer Architecture
+
+      <br><br>
       <h3>Education</h3>
-      <br>
+      <ul>
+        <li><b>Master of Science (MSc)</b>, Computer Science and Engineering, Bangladesh University of Engineering and Technology, 2012 - 2014</li>
+        <li><b>Bachelor of Science (MSc)</b>, Computer Science and Engineering, Bangladesh University of Engineering and Technology, 2007 - 2012</li>
+      </ul>
     </section>
     <footer>
       <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
