Crop and resize image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="wrapper">
     <header>
-      <img src="images/Ayon.jpg">
+      <img src="images/Ayon.jpg"  style="width:200px">
       <h1>Ayon Sen</h1>
       <br> PhD Student
       <br> <a href="https://www.cs.wisc.edu/" target="_blank">Computer Sciences Department</a>
