--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <img src="images/Ayon.jpg"  style="width:200px">
       <h1>Ayon Sen</h1>
-      <br> PhD Student
+      <br> Ph.D. Student
       <br> <a href="https://www.cs.wisc.edu/" target="_blank">Computer Sciences Department</a>
       <br> <a href="https://www.wisc.edu/" target="_blank">University of Wisconsin-Madison</a>
       <br>
