--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <br><br>
       <h3>Education</h3>
       <ul>
-        <li><b>Master of Science (MSc)</b>, Computer Science and Engineering, Bangladesh University of Engineering and Technology, 2012 - 2014</li>
-        <li><b>Bachelor of Science (MSc)</b>, Computer Science and Engineering, Bangladesh University of Engineering and Technology, 2007 - 2012</li>
+        <li><b>Master of Science (MSc)</b>, Computer Science and Engineering, Bangladesh University of Engineering and Technology, 2014</li>
+        <li><b>Bachelor of Science (BSc)</b>, Computer Science and Engineering, Bangladesh University of Engineering and Technology, 2012</li>
       </ul>
     </section>
     <footer>
