Add AMLC paper to publication list

--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
 
       <br><br>
       <h3>Publications</h3>
-      <ol>
+      <ul>
+        <li> Ayon Sen, Sheeraz Ahmad: Learning Substitutes Relationship with Deep Ranking. AMLC 2018.</li>
         <li> Md. Mahbubul Hasan, A. S. M. Sohidull Islam, Ayon Sen: Palindromic Subsequence Automata and Longest Common Palindromic Subsequence. MCS 2017: 1-14</li>
-        <li> Xuezhou Zhang, Hrag Ohannessian, Ayon Sen, Scott Alfeld, Xiaojin Zhu: Optimal Teaching for Online Perceptrons. NIPS COnstructive Machine Learning Workshop 2016 </li>
+        <li> Xuezhou Zhang, Hrag Ohannessian, Ayon Sen, Scott Alfeld, Xiaojin Zhu: Optimal Teaching for Online Perceptrons. NIPS Constructive Machine Learning Workshop 2016 </li>
         <li> Ayon Sen, Md. Monirul Islam, Kazuyuki Murase, Xin Yao: Binarization With Boosting and Oversampling for Multiclass Classification. IEEE T. Cybernetics 2015, Issue 99. </li>
         <li> Ayon Sen, A. S. M. Sohidull Islam, Md. Yusuf Sarwar Uddin: MARQUES: Distributed multi-attribute range query solution using space filling curve on DTHs. NSysS 2015: 1 -9 </li>
         <li> Ayon Sen, Md. Monirul Islam, Kazuyuki Murase: An algorithmic framework based on the binarization approach for supervised and semi-supervised multiclass problems. IJCNN 2014: 175-182. </li>
         <li> Ayon Sen, Tahmid-un-Nabi, Pritom Ahmed, Rezwana Reaz, A. S. M. Sohidull Islam, M. Sohel Rahman: A Modified Scatter Search Approach to Solve the DNA Fragment Assembly Problem. MIC 2013. </li>
         <li> Md. Mahbubul Hasan, A. S. M. Sohidull Islam, Ayon Sen: On Palindromic Sequence Automata and Applications. ICIAA 2013: 158-168</li>
-      </ol>
+      </ul>
 
       <h3>Experience</h3>
       <h4>Applied Scientist Intern</h4>
