Add Facebook internship information

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     <section>
       <br><br>
       <h3>About Me</h3>
-      I am a fourth year Ph.D. student at the Computer Sciences Department, University of Wisconsin-Madison under the supervision of <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research interests lie in the domain of data mining, machine learning and machine teaching. My current focus is machine teaching which is the inverse problem to machine learning. In this scenario, we assume that a teacher knows the learning goal and wants to design an optimal (e.g., smallest) training set for a particular learner. Machine teaching has multiple applications in the fields of computer security, debugging, educational psychology etc. More detials about machine teaching can be found <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">here</a>.
+      I am a sixth year Ph.D. student at the Computer Sciences Department, University of Wisconsin-Madison under the supervision of <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research interests lie in the domain of data mining, machine learning and machine teaching. My current focus is machine teaching which is the inverse problem to machine learning. In this scenario, we assume that a teacher knows the learning goal and wants to design an optimal (e.g., smallest) training set for a particular learner. Machine teaching has multiple applications in the fields of computer security, debugging, educational psychology etc. More detials about machine teaching can be found <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">here</a>.
 
       <br><br>
       <h3>Publications</h3>
       <ul>
+        <li> Martina Rau, Ayon Sen, Xiaojin Zhu: Using Machine Learning to Overcome the Expert Blind Spot for Perceptual Fluency Trainings. AIED 2019.</li>
         <li> Ayon Sen, Scott Alfeld, Xuezhou Zhang, Ara Vartanian, Yuzhe Ma, Xiaojin Zhu: Training Set Camouflage. Gamesec 2018. [<a href="https://arxiv.org/pdf/1812.05725.pdf">pdf</a>]</li>
         <li> Ayon Sen, Purav Patel, Martina A. Rau, Blake Mason, Robert Nowak, Timothy T. Rogers, Xiaojin Zhu: Machine Beats Human at Sequencing Visuals for Perceptual-Fluency Practice. EDM 2018. [<a href="files/camouflage.pdf">pdf</a>]</li>
         <li> Ayon Sen, Purav Patel, Martina A. Rau, Blake Mason, Robert Nowak, Timothy T. Rogers, Xiaojin Zhu: For Teaching Perceptual Fluency, Machines Beat Human Experts. CogSci 2018. </li>
@@ -44,6 +45,12 @@
       </ul>
 
       <h3>Experience</h3>
+      <h4>PhD Intern</h4>
+      <b>Organization:</b> Facebook<br>
+      <b>Period:</b> May 2019 - Aug 2019<br>
+      I worked on the Pages Integrity team on the Business Impersonation Detection problem. Impersonation is a serious problem that often acts as a gateway to a variety of other issues such as privacy violations, data breach, phishing attacks, scams, misinformation etc. causing heavy damage to both users and Facebook. I focused on building the backend infrastructure for realtime impersonation detection based on text. In particular I used different text matching techniques (including a Siamese DNN) that are robust to adversarial obfuscations. My efforts helped increase the coverage of impersonation detection by around 20\% with improved precision.
+      <br><br>
+
       <h4>Applied Scientist Intern</h4>
       <b>Organization:</b> Amazon<br>
       <b>Period:</b> May 2017 - Aug 2017<br>
