--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h4>PhD Intern</h4>
       <b>Organization:</b> Facebook<br>
       <b>Period:</b> May 2019 - Aug 2019<br>
-      I worked on the Pages Integrity team on the Business Impersonation Detection problem. Impersonation is a serious problem that often acts as a gateway to a variety of other issues such as privacy violations, data breach, phishing attacks, scams, misinformation etc. causing heavy damage to both users and Facebook. I focused on building the backend infrastructure for realtime impersonation detection based on text. In particular I used different text matching techniques (including a Siamese DNN) that are robust to adversarial obfuscations. My efforts helped increase the coverage of impersonation detection by around 20\% with improved precision.
+      I worked on the Pages Integrity team on the Business Impersonation Detection problem. Impersonation is a serious problem that often acts as a gateway to a variety of other issues such as privacy violations, data breach, phishing attacks, scams, misinformation etc. causing heavy damage to both users and Facebook. I focused on building the backend infrastructure for realtime impersonation detection based on text. In particular I used different text matching techniques (including a Siamese DNN) that are robust to adversarial obfuscations. My efforts helped increase the coverage of impersonation detection by around 20% with improved precision.
       <br><br>
 
       <h4>Applied Scientist Intern</h4>
