--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <br><br>
       <h3>About Me</h3>
       I am a sixth year Ph.D. student at the Computer Sciences Department, University of Wisconsin-Madison under the supervision of <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research interests lie in the domain of data mining, machine learning and machine teaching. My current focus is machine teaching which is the inverse problem to machine learning. In this scenario, we assume that a teacher knows the learning goal and wants to design an optimal (e.g., smallest) training set for a particular learner. Machine teaching has multiple applications in the fields of computer security, debugging, educational psychology etc. More detials about machine teaching can be found <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">here</a>.
+      <br><br>
+      Here is my <a href="Resume_Ayon.pdf" target="_blank">resume</a>.
 
       <br><br>
       <h3>Publications</h3>
