Update About me section to reflect research scientist position

--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
     <header>
       <img src="images/Ayon.jpg"  style="width:200px">
       <h1>Ayon Sen</h1>
-      <br> Ph.D. Student
-      <br> <a href="https://www.cs.wisc.edu/" target="_blank">Computer Sciences Department</a>
-      <br> <a href="https://www.wisc.edu/" target="_blank">University of Wisconsin-Madison</a>
+      <br> Research Scientist
+      <br> Facebook
       <br>
-      <br>email: asen6 at wisc dot edu
+      <br>email: ayonsn at gmail dot com
 
     </header>
     <section>
       <br><br>
       <h3>About Me</h3>
-      I am a sixth year Ph.D. student at the Computer Sciences Department, University of Wisconsin-Madison under the supervision of <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research interests lie in the domain of data mining, machine learning and machine teaching. My current focus is machine teaching which is the inverse problem to machine learning. In this scenario, we assume that a teacher knows the learning goal and wants to design an optimal (e.g., smallest) training set for a particular learner. Machine teaching has multiple applications in the fields of computer security, debugging, educational psychology etc. More detials about machine teaching can be found <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">here</a>.
+      I am a research scientist working at Facebook. I completed my PhD at the Computer Sciences Department, University of Wisconsin-Madison under the supervision of <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research interests lie in the domain of data mining, machine learning and machine teaching. My PhD research focus was machine teaching which is the inverse problem to machine learning. In this scenario, we assume that a teacher knows the learning goal and wants to design an optimal (e.g., smallest) training set for a particular learner. Machine teaching has multiple applications in the fields of computer security, debugging, educational psychology etc. More detials about machine teaching can be found <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">here</a>.
       <br><br>
       Here is my <a href="Resume_Ayon.pdf" target="_blank">resume</a>.
 
