--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="images/Ayon.jpg"  style="width:200px">
       <h1>Ayon Sen</h1>
       <br> Research Scientist
-      <br> Facebook
+      <br> Meta
       <br>
       <br>email: ayonsn at gmail dot com
 
@@ -24,7 +24,7 @@
     <section>
       <br><br>
       <h3>About Me</h3>
-      I am a research scientist working at Facebook. I completed my PhD at the Computer Sciences Department, University of Wisconsin-Madison under the supervision of <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research interests lie in the domain of data mining, machine learning and machine teaching. My PhD research focus was machine teaching which is the inverse problem to machine learning. In this scenario, we assume that a teacher knows the learning goal and wants to design an optimal (e.g., smallest) training set for a particular learner. Machine teaching has multiple applications in the fields of computer security, debugging, educational psychology etc. More detials about machine teaching can be found <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">here</a>.
+      I am a research scientist working at Meta. Before joining Meta, I completed my PhD at the Computer Sciences Department, University of Wisconsin-Madison under the supervision of <a href="http://pages.cs.wisc.edu/~jerryzhu/" target="_blank" >Xiaojin (Jerry) Zhu</a>. My research interests lie in the domain of data mining, machine learning and machine teaching. My PhD research focus was machine teaching which is the inverse problem to machine learning. In this scenario, we assume that a teacher knows the learning goal and wants to design an optimal (e.g., smallest) training set for a particular learner. Machine teaching has multiple applications in the fields of computer security, debugging, educational psychology etc. More detials about machine teaching can be found <a href="http://pages.cs.wisc.edu/~jerryzhu/machineteaching/" target="_blank">here</a>.
       <br><br>
       Here is my <a href="Resume_Ayon.pdf" target="_blank">resume</a>.
 
@@ -46,6 +46,12 @@
       </ul>
 
       <h3>Experience</h3>
+      <h4>Research Scientist</h4>
+      <b>Organization:</b> Meta<br>
+      <b>Period:</b> August 2020 - Now <br>
+      Most of projects revolve around integrity. In this domain I have combined multimodal (e.g., text, image etc.) content detection with behavioral signals to identify bad actors on the platform. 
+      <br><br>
+
       <h4>PhD Intern</h4>
       <b>Organization:</b> Facebook<br>
       <b>Period:</b> May 2019 - Aug 2019<br>
