--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul>
         <li> Martina Rau, Ayon Sen, Xiaojin Zhu: Using Machine Learning to Overcome the Expert Blind Spot for Perceptual Fluency Trainings. AIED 2019.</li>
         <li> Ayon Sen, Scott Alfeld, Xuezhou Zhang, Ara Vartanian, Yuzhe Ma, Xiaojin Zhu: Training Set Camouflage. Gamesec 2018. [<a href="https://arxiv.org/pdf/1812.05725.pdf">pdf</a>]</li>
-        <li> Ayon Sen, Purav Patel, Martina A. Rau, Blake Mason, Robert Nowak, Timothy T. Rogers, Xiaojin Zhu: Machine Beats Human at Sequencing Visuals for Perceptual-Fluency Practice. EDM 2018. [<a href="files/camouflage.pdf">pdf</a>]</li>
+        <li> Ayon Sen, Purav Patel, Martina A. Rau, Blake Mason, Robert Nowak, Timothy T. Rogers, Xiaojin Zhu: Machine Beats Human at Sequencing Visuals for Perceptual-Fluency Practice. EDM 2018. [<a href="files/edm_chem_machine_teaching.pdf">pdf</a>]</li>
         <li> Ayon Sen, Purav Patel, Martina A. Rau, Blake Mason, Robert Nowak, Timothy T. Rogers, Xiaojin Zhu: For Teaching Perceptual Fluency, Machines Beat Human Experts. CogSci 2018. </li>
         <li> Ayon Sen, Sheeraz Ahmad: Learning Substitutes Relationship with Deep Ranking. AMLC 2018.</li>
         <li> Md. Mahbubul Hasan, A. S. M. Sohidull Islam, Ayon Sen: Palindromic Subsequence Automata and Longest Common Palindromic Subsequence. MCS 2017.<!-- : 1-14 --></li>
