--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <h3>Publications</h3>
       <ul>
         <li> Martina Rau, Ayon Sen, Xiaojin Zhu: Using Machine Learning to Overcome the Expert Blind Spot for Perceptual Fluency Trainings. AIED 2019.</li>
-        <li> Ayon Sen, Scott Alfeld, Xuezhou Zhang, Ara Vartanian, Yuzhe Ma, Xiaojin Zhu: Training Set Camouflage. Gamesec 2018. [<a href="https://arxiv.org/pdf/1812.05725.pdf">pdf</a>]</li>
-        <li> Ayon Sen, Purav Patel, Martina A. Rau, Blake Mason, Robert Nowak, Timothy T. Rogers, Xiaojin Zhu: Machine Beats Human at Sequencing Visuals for Perceptual-Fluency Practice. EDM 2018. [<a href="files/edm_chem_machine_teaching.pdf">pdf</a>]</li>
+        <li> Ayon Sen, Scott Alfeld, Xuezhou Zhang, Ara Vartanian, Yuzhe Ma, Xiaojin Zhu: Training Set Camouflage. Gamesec 2018. [<a href="https://arxiv.org/pdf/1812.05725.pdf" target="_blank">pdf</a>]</li>
+        <li> Ayon Sen, Purav Patel, Martina A. Rau, Blake Mason, Robert Nowak, Timothy T. Rogers, Xiaojin Zhu: Machine Beats Human at Sequencing Visuals for Perceptual-Fluency Practice. EDM 2018. [<a href="files/edm_chem_machine_teaching.pdf" target="_blank">pdf</a>]</li>
         <li> Ayon Sen, Purav Patel, Martina A. Rau, Blake Mason, Robert Nowak, Timothy T. Rogers, Xiaojin Zhu: For Teaching Perceptual Fluency, Machines Beat Human Experts. CogSci 2018. </li>
         <li> Ayon Sen, Sheeraz Ahmad: Learning Substitutes Relationship with Deep Ranking. AMLC 2018.</li>
         <li> Md. Mahbubul Hasan, A. S. M. Sohidull Islam, Ayon Sen: Palindromic Subsequence Automata and Longest Common Palindromic Subsequence. MCS 2017.<!-- : 1-14 --></li>
-        <li> Xuezhou Zhang, Hrag Ohannessian, Ayon Sen, Scott Alfeld, Xiaojin Zhu: Optimal Teaching for Online Perceptrons. NIPS Constructive Machine Learning Workshop 2016. [<a href="files/NIPS_online_perceptron.pdf">pdf</a>] </li>
+        <li> Xuezhou Zhang, Hrag Ohannessian, Ayon Sen, Scott Alfeld, Xiaojin Zhu: Optimal Teaching for Online Perceptrons. NIPS Constructive Machine Learning Workshop 2016. [<a href="files/NIPS_online_perceptron.pdf" target="_blank">pdf</a>] </li>
         <li> Ayon Sen, Md. Monirul Islam, Kazuyuki Murase, Xin Yao: Binarization With Boosting and Oversampling for Multiclass Classification. IEEE T. Cybernetics 2015.<!-- , Issue 99. --></li>
         <li> Ayon Sen, A. S. M. Sohidull Islam, Md. Yusuf Sarwar Uddin: MARQUES: Distributed multi-attribute range query solution using space filling curve on DTHs. NSysS 2015.<!-- : 1 -9 --></li>
         <li> Ayon Sen, Md. Monirul Islam, Kazuyuki Murase: An algorithmic framework based on the binarization approach for supervised and semi-supervised multiclass problems. IJCNN 2014.<!-- : 175-182. --></li>
